    required in XML).
    <https://github.com/jhy/jsoup/issues/1420>

  * Bugfix: [Fuzz] when parsing an attribute key containing "abs:abs", a validation error would be incorrectly
    thrown.
    <https://github.com/jhy/jsoup/issues/1541>

  * Bugfix: [Fuzz] could NPE while parsing in resetInsertionMode().
    <https://github.com/jhy/jsoup/issues/1538>

*** Release 1.13.1 [2020-Feb-29]
  * Improvement: added Element#closest(selector), which walks up the tree to find the nearest element matching the
    selector.
    <https://github.com/jhy/jsoup/issues/1326>

  * Improvement: memory optimizations, reducing the retained size of a Document by ~ 39%, and allocations by ~ 9%:
      1. Attributes holder in Elements is only created if the element has attributes
      2. Only track the baseUri in an element when it is set via DOM to a new value for a given tree
      3. After parsing, do not retain the input character reader (and associated buffers) in the Document#parser

  * Improvement: substantial parse speed improvements vs 1.12.x (bringing back to par with previous releases).
    <https://github.com/jhy/jsoup/issues/1327>

  * Improvement: when pretty-printing, comments in inline tags are not pushed to a newline

  * Improvement: added Attributes#hasDeclaredValueForKey(key) and Attribute#hasDeclaredValueForKeyIgnoreCase(), to check
    if an attribute is set but has no value. Useful in place of the deprecated and removed BooleanAttribute class and
    instanceof test.

  * Improvement: removed old methods and classes that were marked deprecated in previous releases.

  * Improvement: added Element#select(Evaluator) and Element#selectFirst(Evaluator), to allow re-use of a parsed CSS
    selector if using the same evaluator many times.
    <https://github.com/jhy/jsoup/issues/1319>

  * Improvement: added Elements#forms(), Elements#textNodes(), Elements#dataNodes(), and Elements#comments(), as a