@@ -130,6 +130,9 @@ jsoup changelog
   * Bugfix: [Fuzz] could NPE while parsing in resetInsertionMode().
     <https://github.com/jhy/jsoup/issues/1538>
 
+  * Bugfix: [Fuzz] when parsing XML, could Stack Overflow when parsing XML declarations.
+    <https://github.com/jhy/jsoup/issues/1539>
+
 *** Release 1.13.1 [2020-Feb-29]
   * Improvement: added Element#closest(selector), which walks up the tree to find the nearest element matching the
     selector.
